fix page layout issues and improved project description

--- a/style.css
+++ b/style.css
@@ -47,9 +47,15 @@ label {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     gap: 20px;
+    flex-grow: 1;
      
+}
+
+
+form {
+    width: 100%;
 }
 .serviceAwarenessText {
     font-weight: bold;
@@ -57,6 +63,7 @@ label {
 .serviceAwareness {
     background-color:rgb(223, 223, 223);
     padding: 20px 30px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
  
 .accountSetup {
@@ -67,6 +74,8 @@ label {
     margin: 0px;
     width: 100%;
     box-sizing: border-box;
+    
+    box-shadow: inset 0 2px 5px rgba(0,0,0,0.05);
 
 }
 button {
